--- a/Level 3/Mele_team/choose-your-own-adventure-mjk-master/index.html
+++ b/Level 3/Mele_team/choose-your-own-adventure-mjk-master/index.html
@@ -11,29 +11,29 @@
     <title>Chosse Your Own Adventure! | Home</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">M.J.K</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-            </li>
-            <li class="nav-item About us">
-              <a class="nav-link About us-toggle" href="About.html" id="navbarAbout us" role="button" data-toggle="About us" aria-haspopup="true" aria-expanded="false">
-                About us
-              </a>
-            <li class="nav-item">
-              <a class="nav-link contact-toggle" href="Contact.html">Contact</a>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
+    <a class="navbar-brand" href="../index.html">M.J.K</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item About us">
+          <a class="nav-link About us-toggle" href="#" id="navbarAbout us" role="button" data-toggle="About us" aria-haspopup="true" aria-expanded="false">
+            About us
+          </a>
+        <li class="nav-item">
+          <a class="nav-link contact-toggle" href="#">Contact</a>
+
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
 
       <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
@@ -56,7 +56,7 @@
 
      <!--pt stands for top-padding, 2 is chosen between 1 and 5-->
     <div class="container pt-2 text-center">
-      <a href="start.html" class="btn btn-primary" role="button">Start Mission</a>
+      <a href="html_files/start.html" class="btn btn-primary" role="button">Start Mission</a>
     </div>
     <style>
       body {
